crates/keron-lang/tests/corpus/errors/check/secret_assigned_from_string.keron
val token: Secret = "plain-text-token"
